--- a/ProyectowepGerardo/Galeriasr20.html
+++ b/ProyectowepGerardo/Galeriasr20.html
@@ -54,7 +54,47 @@
   </style>
 
   <body>
-  
+  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active">
+          <a href="https://afedocf18.github.io/ProyectowepGerardo/modificaciones.html">Modificaciones <span class="sr-only">(current)</span></a></li>
+           <li class="active">
+          <a href="https://afedocf18.github.io/ProyectowepGerardo/TheFamilyQR.html">The Family QR <span class="sr-only">(current)</span></a></li>
+        
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tipos de motor SR20 <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a class="aDEL" href="https://afedocf18.github.io/ProyectowepGerardo/SR20DE.html">SR20DEL</a></li>
+            <li><a class="aDEH" href="https://afedocf18.github.io/ProyectowepGerardo/SR20DEH.html">SR20DEH</a></li>
+            <li><a class="aVVL" href="https://afedocf18.github.io/ProyectowepGerardo/SR20VVL.html">SR20VVL</a></li>
+            <li><a class="aDET" href="https://afedocf18.github.io/ProyectowepGerardo/SR20DET.html">SR20DET</a></li>
+            <li><a class="aVET" href="https://afedocf18.github.io/ProyectowepGerardo/SR20VET.html">SR20VET</a></li>
+            
+          </ul>
+        </li>
+      </ul>
+      <form class="navbar-form navbar-left">
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Search">
+        </div>
+        <button type="submit" class="btn btn-default">Buscar</button>
+      </form>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#">Ayuda</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Más <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="https://afedocf18.github.io/ProyectowepGerardo/Galeriasr20.html">Galería SR20</a></li>
+            <li><a href="https://afedocf18.github.io/ProyectowepGerardo/TheFamilyQR.html">The QR Family </a></li>
+            <li><a href="https://afedocf18.github.io/ProyectowepGerardo/GaleriaQR.html">Galería QR</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="https://afedocf18.github.io/ProyectowepGerardo/nissan%20sr20.html">NissanSR20</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
   
   
 
